fix label not being floatable in category selecter, handle text overflow in DDL

--- a/src/components/TaskManager/CategorySelector/style.module.css
+++ b/src/components/TaskManager/CategorySelector/style.module.css
@@ -57,19 +57,19 @@
   min-height: 70px;
   padding: 4px;
   align-items: center;
-  pointer-events: none;
   z-index: 2;
 }
 
 .deleteIcon {
   background-color: #f9f9f9;
+  min-width: 20px;
+  min-height: 20px;
   width: 20px;
   height: 20px;
   border-radius: 50%;
   padding: auto;
   cursor: pointer;
   color: #a8b1d3;
-  font-size: 18px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -97,8 +97,13 @@
   padding: 8px 16px;
   display: flex;
   justify-content: space-between;
+  gap: 5px;
   cursor: pointer;
   font-size: 14px;
+  overflow-wrap: break-word;
+  text-overflow: unset;
+  white-space: normal;
+  word-break: break-word;
 }
 
 .dropdownItem:hover {
@@ -154,7 +159,6 @@
 }
 .selectedDropdownItem {
   background-color: #f7f9ff;
-  border-radius: 4px;
 }
 
 .dropdownItem:hover:not(.selectedDropdownItem) {
@@ -179,10 +183,8 @@
   left: 12px;
   transform: translateY(-50%);
   font-size: 16px;
-  color: #8385af;
+  color: rgba(77, 77, 77, 0.5);
   transition: all 0.2s ease;
-  pointer-events: none;
-  z-index: 4;
 }
 .label.floating,
 .input:focus + .label,
